tests/init/neg/soundness/soundness2.scala
class C(_c: C) {
  val c2 = new C(this)
}
